# ariac_gz_plugins

./: CMakeLists.txt  package.xml
hooks/: ariac_camera_plugin.dsv.in  ariac_camera_plugin.sh.in
include/ariac_camera_plugin/: ariac_camera_plugin.hpp
include/ariac_gz_plugins/: ariac_camera_plugin.hpp  ariac_logical_camera_plugin.hpp  ariac_ray_plugin.hpp  vacuum_gripper_plugin.hpp
models/advanced_logical_camera/: model.sdf
models/advanced_logical_camera/meshes/: camera.dae
models/basic_logical_camera/: model.sdf
models/basic_logical_camera/meshes/: camera.dae
models/break_beam/: model.sdf
models/laser_profiler/: model.sdf
models/lidar/: model.sdf
models/proximity/: model.sdf
models/rgb_camera/: model.sdf
models/rgbd_camera/: model.sdf
src/: ariac_camera_plugin.cpp  ariac_logical_camera_plugin.cpp  ariac_ray_plugin.cpp  vacuum_gripper_plugin.cpp
worlds/: camera_world.sdf
